--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="calendar">
             <div class="month">
-                <i class="fas fa-angle-left prev"> < </i> 
+                <i class="fas fa-angle-left prev">  </i> 
                 <div class="date">
                     <h1></h1>
                     <p></p>
                 </div>
-                <i class="fas fa-angle-right next"> > </i>
+                <i class="fas fa-angle-right next">  </i>
             </div>
             <div class="weekdays">
                 <div>Sun</div>
