--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 <div class="next-date">7</div>
             </div>
         </div>
+        <div class="Event">
+            <div>Events</div>
+        </div>
     </div>
 
 
