--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
                 <button id="cancelButton">Cancel</button>
             </div>
         </div>
+
+        <!-- <div class = "deleteEventModel" id="deleteEventModel">
+            <div class="modalDelete">
+                <h2>Do you want to delete this event?</h2>
+                <p id="eventText"></p>
+                
+                <button id="yesButton">Confirm</button>
+                <button id="cancelButton">Cancel</button>
+            </div> 
+        </div> -->
+        
+        <div class = "sidepanelcontainer" id="sidepanelcontainer">
+            <div class = "Sidepanel">
+                <h1>Events</h1>
+                <p id="eventText">There are no events :D</p>
+
+                <button id="closeButton">Close</button>
+        </div>
+
+        </div>
     </div>
 
     <script src="script.js"></script>
